--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
-  "keywords": ["webrtc", "video-chat", "education", "webgl", "graphics"],
+  "keywords": [
+    "webrtc",
+    "video-chat",
+    "education",
+    "webgl",
+    "graphics"
+  ],
   "author": "Ken Perlin",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "y-textarea": "^1.0.2",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   }
 }
