--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "yjs": "^13.6.18",
+    "y-websocket": "^1.5.0",
+    "lib0": "^0.2.97",
+    "y-protocols": "^1.0.6"
   }
 }
