--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
-  "keywords": ["webrtc", "video-chat", "education", "webgl", "graphics"],
+  "keywords": [
+    "webrtc",
+    "video-chat",
+    "education",
+    "webgl",
+    "graphics"
+  ],
   "author": "Ken Perlin",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "express": "^4.18.2",
-    "ws": "^8.14.2",
-    "yjs": "^13.6.18",
-    "y-websocket": "^1.5.0",
     "lib0": "^0.2.97",
-    "y-protocols": "^1.0.6"
+    "ws": "^8.14.2",
+    "y-protocols": "^1.0.6",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.6.18"
   }
 }
